--- a/admin/index.html
+++ b/admin/index.html
@@ -5,6 +5,26 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Delivery Admin</title>
+    <!-- User identification start -->
+    <script>
+    window.usetifulTags = {      
+         userId : "EXAMPLE_USER_ID",  // This identifies the user and should be unique. Change it
+         firstName : "EXAMPLE_FIRST_NAME",  // This property defines user’s first name. Change it
+         lastName : "EXAMPLE_LAST_NAME" // This property defines user’s last name. Change it     
+    };</script>
+  <!-- User identification end -->
+<!-- Usetiful script start -->
+  <script>
+  (function (w, d, s) {
+      var a = d.getElementsByTagName('head')[0];
+      var r = d.createElement('script');
+      r.async = 1;
+      r.src = s;
+      r.setAttribute('id', 'usetifulScript');
+      r.dataset.token = "29a659c759679c9a241a77437c320ca3";  // This is your unique USETIFUL token. Don’t change it.
+      a.appendChild(r);
+    })(window, document, "https://www.usetiful.com/dist/usetiful.js");</script>
+<!-- Usetiful script end -->
   </head>
   <body>
     <div id="root"></div>
