--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,8 +26,8 @@
       a.appendChild(r);
     })(window, document, "https://www.usetiful.com/dist/usetiful.js");</script>
 <!-- Usetiful script end -->
-
-    
+  </head>
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
