Updated the way usetiful is installed, now using GTM

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,29 +5,21 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Delivery</title>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PVZ2VJDZ');</script>
+<!-- End Google Tag Manager -->
 
-<!-- User identification start -->
-    <script>
-    window.usetifulTags = {      
-         userId : "EXAMPLE_USER_ID",  // This identifies the user and should be unique. Change it
-         firstName : "EXAMPLE_FIRST_NAME",  // This property defines user’s first name. Change it
-         lastName : "EXAMPLE_LAST_NAME" // This property defines user’s last name. Change it     
-    };</script>
-  <!-- User identification end -->
-<!-- Usetiful script start -->
-  <script>
-  (function (w, d, s) {
-      var a = d.getElementsByTagName('head')[0];
-      var r = d.createElement('script');
-      r.async = 1;
-      r.src = s;
-      r.setAttribute('id', 'usetifulScript');
-      r.dataset.token = "29a659c759679c9a241a77437c320ca3";  // This is your unique USETIFUL token. Don’t change it.
-      a.appendChild(r);
-    })(window, document, "https://www.usetiful.com/dist/usetiful.js");</script>
-<!-- Usetiful script end -->
+    
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PVZ2VJDZ"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
